<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addTaskActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity"
    android:background="@color/background_color"
    android:paddingHorizontal="30dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:titleTextColor="@color/white"
        app:titleTextAppearance="@style/TextAppearance.App.ActionBar.Title"
        android:layout_marginBottom="20dp"
        android:theme="@style/ThemeOverlay.App.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:theme="@style/ToolbarTheme"/>

    <EditText
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:autofillHints="Grocery store today"
        android:ems="10"
        android:layout_marginTop="80dp"
        android:hint="@string/title_hint_e_g_buy_groceries_today"
        android:background="@drawable/ui_radius"
        android:paddingHorizontal="20dp"
        android:inputType="text"
        android:text=""
        android:textSize="18sp"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="147dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/taskNote"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autofillHints="I need to buy a some milk and eggs from the grocery store today."
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="243dp"
        android:hint="@string/note_hint_enter_task_note"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:background="@drawable/ui_radius"
        app:layout_constraintTop_toBottomOf="@+id/taskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/deadlineText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:focusable="false"
        android:clickable="false"
        android:focusableInTouchMode="true"
        android:cursorVisible="false"
        android:longClickable="false"
        android:inputType="none"
        android:hint="@string/select_task_deadline"
        android:background="@drawable/ui_radius"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/taskNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deadlineBtn"/>

    <ImageButton
        android:id="@+id/deadlineBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:text="@string/select_task_deadline"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/taskNote"
        app:layout_constraintStart_toEndOf="@+id/deadlineText"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_image_button_primary"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_calendar_time"/>

    <Button
        android:id="@+id/saveTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/add_task_btn_text"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/deadlineText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_image_button_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"/>

</androidx.constraintlayout.widget.ConstraintLayout>