<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskDetails"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskDetailsActivity"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="15dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:paddingTop="20dp"
        android:background="@android:color/transparent"
        app:titleTextAppearance="@style/TextAppearance.App.ActionBar.Title"
        android:layout_marginBottom="20dp"
        android:theme="@style/ThemeOverlay.App.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:theme="@style/ToolbarTheme"/>

    <TextView
        android:id="@+id/titleHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_details_task_title"
        android:textSize="20sp"
        android:textColor="@color/gray_color"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:textColor="@color/text_color"
        android:paddingVertical="6dp"
        app:layout_constraintTop_toBottomOf="@+id/titleHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/descriptionHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_details_description_header"
        android:textSize="20sp"
        android:textColor="@color/gray_color"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="17sp"
        android:textColor="@color/text_color"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/deadlineHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/deadline"
        android:textColor="@color/gray_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:text=""
        android:textColor="@color/text_color"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineHeader" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCard"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:cardBackgroundColor="@color/card_color"
        app:cardCornerRadius="15dp"
        app:cardElevation="2dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/card_color"
                android:gravity="center"
                android:orientation="horizontal"
                app:flow_horizontalGap="15dp"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">


                <ImageButton
                    android:id="@+id/completedButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/rounded_image_button_primary"
                    android:clickable="true"
                    android:contentDescription="@string/delete_task_desc"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginHorizontal="15dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_check_white"
                    android:elevation="0dp"/>




                <ImageButton
                    android:id="@+id/editButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"

                    android:background="@drawable/rounded_image_button_primary"
                    android:contentDescription="@string/delete_task_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_edit_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="0dp"
                    android:layout_marginHorizontal="15dp"/>


                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/rounded_image_button_primary"
                    android:contentDescription="@string/delete_task_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_delete_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="0dp"/>

                <ImageButton
                    android:id="@+id/shareButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="15dp"
                    android:background="@drawable/rounded_image_button_primary"
                    android:contentDescription="@string/delete_task_desc"
                    android:padding="10dp"
                    android:src="@drawable/ic_share_white"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:elevation="0dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </android.support.v7.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>